Större refaktorering för ny info-modell.

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -2,3 +2,6 @@
 store.original.certificate = true
 modules.port=8080
 statistics.enabled = true
+
+intygstjanst.getmedicalcertificateforcare.endpoint.url = not used
+intygstjanst.logicaladdress = not used
