Anpassat till nytt tjänstekontrakt.

--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -36,6 +36,12 @@
 
     <!-- Schemas -->
     <dependency>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>fk7263</artifactId>
+    </dependency>
+
+    <!-- Schemas -->
+    <dependency>
       <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate.v1</groupId>
       <artifactId>clinicalprocess-healthcond-certificate-interactions</artifactId>
     </dependency>
