Konfigurerade Checkstyle i bygget.

--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,20 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>se.inera.intyg.common</groupId>
+            <artifactId>common-build-tools</artifactId>
+            <version>${common.version}</version>
+          </dependency>
+        </dependencies>
+        <configuration>
+          <configLocation>checkstyle/checkstyle.xml</configLocation>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
