Fixade Checkstyle-varningar.

--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -1,23 +1,23 @@
-#This file is used for bootstrapping Recipient[s] and configuring names and addresses to these. 
+#This file is used for bootstrapping Recipient[s] and configuring names and addresses to these.
 
 # Lines with the prefix: recipient are used to create Recipient objects
-# It is made up of the following parts: 
+# It is made up of the following parts:
 # recipient.[ID].[name] = xxx
 # recipient.[ID].[logicalAddress] = xxx
 # [ID] is the Id of the Receiver object (at this point a non-existing Receiver object)
 # [name] is the pretty print name for this recipient
-# [logicalAddress] is the address that is to be used for sending certificates 
+# [logicalAddress] is the address that is to be used for sending certificates
 
-# Defines the recipient FK (Försäkringskassan)
-recipient.FK.name = Försäkringskassan
+# Defines the recipient FK (Fï¿½rsï¿½kringskassan)
+recipient.FK.name = Fï¿½rsï¿½kringskassan
 recipient.FK.logicalAddress = FK
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
 recipient.TS.logicalAddress = tsTestAddress
 
 # Lines with the prefix: recipient-transport-model-version are used to indicate which transportmodel-version a
-# certain Recipient supports for a give certificate.  
-# It is made up of the following parts: 
+# certain Recipient supports for a give certificate.
+# It is made up of the following parts:
 # recipient-transport-model-version.[ID].[Certificate-type] = [TransportModelVersion]
 # [ID] is the Id of a Recipient object
 # [Certificate-type] is the type of the certificate
