Fixade felaktig encoding.

--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -8,8 +8,8 @@
 # [name] is the pretty print name for this recipient
 # [logicalAddress] is the address that is to be used for sending certificates
 
-# Defines the recipient FK (Fï¿½rsï¿½kringskassan)
-recipient.FK.name = Fï¿½rsï¿½kringskassan
+# Defines the recipient FK (Försäkringskassan)
+recipient.FK.name = Försäkringskassan
 recipient.FK.logicalAddress = FK
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
