--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -11,7 +11,7 @@
     inera_tomcat_folder: "/var/lib/{{ tomcat_service }}"
     etc_folder: "{{ inera_tomcat_folder }}/etc"
     webapps_folder: "{{ inera_tomcat_folder }}/webapps"
-    version: 
+    version: 2.1.0-b17
 
   roles:
     - intygstjanst
