--- a/tools/liquibase-runner/src/main/assembly/template/liquibase.properties
+++ b/tools/liquibase-runner/src/main/assembly/template/liquibase.properties
@@ -1,4 +1,5 @@
 driver: com.mysql.jdbc.Driver
-url: jdbc:mysql://##URL (i.e localhost:3306/intyg?useCompression=true) ##
+#localhost:3306/intygstjanst?useCompression=true
+url: jdbc:mysql://##URL##
 username: ##USER##
 password: ##PASS##
