--- a/pom.xml
+++ b/pom.xml
@@ -21,21 +21,37 @@
 
     <!-- Common -->
     <common.version>0-SNAPSHOT</common.version>
+    <common.version.range>(,2.1.0]</common.version.range>
 
     <!-- Intygstyper -->
     <fk7263.version>0-SNAPSHOT</fk7263.version>
+    <fk7263.version.range>(,2.1.0]</fk7263.version.range>
+
     <ts-bas.version>0-SNAPSHOT</ts-bas.version>
+    <ts-bas.version.range>(,1.1.0]</ts-bas.version.range>
+
     <ts-diabetes.version>0-SNAPSHOT</ts-diabetes.version>
+    <ts-diabetes.version.range>(,1.1.0]</ts-diabetes.version.range>
 
     <!-- Schemas -->
     <schemas.version>0-SNAPSHOT</schemas.version>
+    <schemas.version.range>(,2.1.0]</schemas.version.range>
+
     <clinicalprocess-healthcond-certificate.version>0-SNAPSHOT</clinicalprocess-healthcond-certificate.version>
+    <clinicalprocess-healthcond-certificate.version.range>
+      (,1.0.0]
+    </clinicalprocess-healthcond-certificate.version.range>
+
     <insuranceprocess-healthreporting.version>0-SNAPSHOT</insuranceprocess-healthreporting.version>
+    <insuranceprocess-healthreporting.version.range>(,1.0.0]</insuranceprocess-healthreporting.version.range>
+
     <itintegration-monitoring.version>0-SNAPSHOT</itintegration-monitoring.version>
+    <itintegration-monitoring.version.range>(,1.0.0]</itintegration-monitoring.version.range>
 
     <!-- Tools -->
     <anonymisering.version>0-SNAPSHOT</anonymisering.version>
-    <liquibase-runner.version>0-SNAPSHOT</liquibase-runner.version>
+    <anonymisering.version.range>(,2.1.0]</anonymisering.version.range>
+
   </properties>
 
   <modules>
@@ -161,6 +177,55 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <configuration>
+          <includeProperties>
+            common.version, fk7263.version, ts-bas.version, ts-diabetes.version, schemas.version,
+            clinicalprocess-healthcond-certificate.version, insuranceprocess-healthreporting.version,
+            itintegration-monitoring.version, anonymisering.version
+          </includeProperties>
+          <properties>
+            <property>
+              <name>common.version</name>
+              <version>${common.version.range}</version>
+            </property>
+            <property>
+              <name>fk7263.version</name>
+              <version>${fk7263.version.range}</version>
+            </property>
+            <property>
+              <name>ts-bas.version</name>
+              <version>${ts-bas.version.range}</version>
+            </property>
+            <property>
+              <name>ts-diabetes.version</name>
+              <version>${ts-diabetes.version.range}</version>
+            </property>
+            <property>
+              <name>schemas.version</name>
+              <version>${schemas.version.range}</version>
+            </property>
+            <property>
+              <name>clinicalprocess-healthcond-certificate.version</name>
+              <version>${clinicalprocess-healthcond-certificate.version.range}</version>
+            </property>
+            <property>
+              <name>insuranceprocess-healthreporting.version</name>
+              <version>${insuranceprocess-healthreporting.version.range}</version>
+            </property>
+            <property>
+              <name>itintegration-monitoring.version</name>
+              <version>${itintegration-monitoring.version.range}</version>
+            </property>
+            <property>
+              <name>anonymisering.version</name>
+              <version>${anonymisering.version.range}</version>
+            </property>
+          </properties>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <executions>
@@ -179,45 +244,6 @@
           </execution>
         </executions>
       </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>unpack-build-tools</id>
-            <phase>package</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>se.inera.intyg.common</groupId>
-                  <artifactId>common-build-tools</artifactId>
-                  <version>${common.version}</version>
-                </artifactItem>
-              </artifactItems>
-              <outputDirectory>${project.build.directory}/build-tools</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <dependencies>
-          <dependency>
-            <groupId>se.inera.intyg.common</groupId>
-            <artifactId>common-build-tools</artifactId>
-            <version>${common.version}</version>
-          </dependency>
-        </dependencies>
-        <configuration>
-          <configLocation>checkstyle/checkstyle.xml</configLocation>
-        </configuration>
-      </plugin>
     </plugins>
   </build>
 
@@ -229,7 +255,7 @@
         <enabled>true</enabled>
       </releases>
       <snapshots>
-        <enabled>false</enabled>
+        <enabled>true</enabled>
       </snapshots>
     </repository>
     <repository>
