--- a/pom.xml
+++ b/pom.xml
@@ -24,19 +24,10 @@
     <common.version.range>(,2.1.0]</common.version.range>
 
     <!-- Intygstyper -->
-    <fk7263.version>0-SNAPSHOT</fk7263.version>
-    <fk7263.version.range>(,2.1.0]</fk7263.version.range>
-
-    <ts-bas.version>0-SNAPSHOT</ts-bas.version>
-    <ts-bas.version.range>(,1.1.0]</ts-bas.version.range>
-
-    <ts-diabetes.version>0-SNAPSHOT</ts-diabetes.version>
-    <ts-diabetes.version.range>(,1.1.0]</ts-diabetes.version.range>
+    <intygstyper.version>0-SNAPSHOT</intygstyper.version>
+    <intygstyper.version.range>(,2.1.0]</intygstyper.version.range>
 
     <!-- Schemas -->
-    <schemas.version>0-SNAPSHOT</schemas.version>
-    <schemas.version.range>(,2.1.0]</schemas.version.range>
-
     <clinicalprocess-healthcond-certificate.version>0-SNAPSHOT</clinicalprocess-healthcond-certificate.version>
     <clinicalprocess-healthcond-certificate.version.range>
       (,1.0.0]
@@ -47,10 +38,6 @@
 
     <itintegration-monitoring.version>0-SNAPSHOT</itintegration-monitoring.version>
     <itintegration-monitoring.version.range>(,1.0.0]</itintegration-monitoring.version.range>
-
-    <!-- Tools -->
-    <anonymisering.version>0-SNAPSHOT</anonymisering.version>
-    <anonymisering.version.range>(,2.1.0]</anonymisering.version.range>
 
   </properties>
 
@@ -100,26 +87,19 @@
       <dependency>
         <groupId>se.inera.intyg.intygstyper</groupId>
         <artifactId>fk7263</artifactId>
-        <version>${fk7263.version}</version>
+        <version>${intygstyper.version}</version>
       </dependency>
-      <dependency>
+      <!--<dependency>
         <groupId>se.inera.intyg.intygstyper</groupId>
         <artifactId>ts-bas</artifactId>
-        <version>${ts-bas.version}</version>
-      </dependency>
-      <dependency>
+        <version>${intygstyper.version}</version>
+      </dependency>--><!--<dependency>
         <groupId>se.inera.intyg.intygstyper</groupId>
         <artifactId>ts-diabetes</artifactId>
-        <version>${ts-diabetes.version}</version>
-      </dependency>
+        <version>${intygstyper.version}</version>
+      </dependency>-->
 
       <!-- Schemas -->
-      <dependency>
-        <groupId>se.inera.intyg.schemas</groupId>
-        <artifactId>schemas-intygstjanst</artifactId>
-        <version>${schemas.version}</version>
-      </dependency>
-
       <dependency>
         <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate.v1</groupId>
         <artifactId>clinicalprocess-healthcond-certificate-interactions</artifactId>
@@ -180,9 +160,8 @@
         <artifactId>versions-maven-plugin</artifactId>
         <configuration>
           <includeProperties>
-            common.version, fk7263.version, ts-bas.version, ts-diabetes.version, schemas.version,
-            clinicalprocess-healthcond-certificate.version, insuranceprocess-healthreporting.version,
-            itintegration-monitoring.version, anonymisering.version
+            common.version, intygstyper.version, clinicalprocess-healthcond-certificate.version,
+            insuranceprocess-healthreporting.version, itintegration-monitoring.version
           </includeProperties>
           <properties>
             <property>
@@ -190,20 +169,8 @@
               <version>${common.version.range}</version>
             </property>
             <property>
-              <name>fk7263.version</name>
-              <version>${fk7263.version.range}</version>
-            </property>
-            <property>
-              <name>ts-bas.version</name>
-              <version>${ts-bas.version.range}</version>
-            </property>
-            <property>
-              <name>ts-diabetes.version</name>
-              <version>${ts-diabetes.version.range}</version>
-            </property>
-            <property>
-              <name>schemas.version</name>
-              <version>${schemas.version.range}</version>
+              <name>intygstyper.version</name>
+              <version>${intygstyper.version.range}</version>
             </property>
             <property>
               <name>clinicalprocess-healthcond-certificate.version</name>
@@ -216,10 +183,6 @@
             <property>
               <name>itintegration-monitoring.version</name>
               <version>${itintegration-monitoring.version.range}</version>
-            </property>
-            <property>
-              <name>anonymisering.version</name>
-              <version>${anonymisering.version.range}</version>
             </property>
           </properties>
         </configuration>
