WEBCERT-1326 Fel logisk adress används vid skickande av intyg

--- a/web/src/main/resources/recipient.properties
+++ b/web/src/main/resources/recipient.properties
@@ -10,7 +10,7 @@
 
 # Defines the recipient FK (Försäkringskassan)
 recipient.FK.name = Försäkringskassan
-recipient.FK.logicalAddress = FK
+recipient.FK.logicalAddress = FKORG
 # Defines the recipient TS (Transportstyrelsen)
 recipient.TS.name = Transportstyrelsen
 recipient.TS.logicalAddress = tsTestAddress
