--- a/ansible/provision_tomcat.yml
+++ b/ansible/provision_tomcat.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook provisions the resources needed by intygstjansten 
 
-- hosts: all
+- hosts: tomcat
   sudo: yes 
   
   roles:
