--- a/ansible/provision_tomcat.yml
+++ b/ansible/provision_tomcat.yml
@@ -1,5 +1,5 @@
 ---
-# This playbook provisions the resources needed by intygstjansten 
+# This playbook provisions the resources needed by tomcat hosts of intygstjansten 
 
 - hosts: tomcat
   sudo: yes 
