--- a/ansible/roles/intygstjanst/tasks/main.yml
+++ b/ansible/roles/intygstjanst/tasks/main.yml
@@ -15,7 +15,7 @@
 
 - name: Download intygstjanst-web-{{ version }}.war
   get_url: url=http://repository-callistasoftware.forge.cloudbees.com/release/se/inera/intyg/intygstjanst/intygstjanst-web/{{ version }}/intygstjanst-web-{{ version }}.war
-           dest={{ releases_folder }}
+           dest={{ releases_folder }}/intygstjanst-web-{{ version }}.war
 
 - name: remove old version of unpacked war
   file: state=absent
