--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -7,13 +7,15 @@
     <groupId>se.inera.intyg.intygstjanst</groupId>
     <artifactId>intygstjanst</artifactId>
     <version>0-SNAPSHOT</version>
+    <relativePath>../../</relativePath>
   </parent>
 
   <artifactId>Migrering</artifactId>
   <name>Migrering</name>
   <packaging>jar</packaging>
+  <version>1.0</version>
 
-<!--
+
   <properties>
     <groovy.version>2.3.6</groovy.version>
   </properties>
@@ -25,7 +27,7 @@
       <layout>default</layout>
     </repository>
   </distributionManagement>
--->
+
   <dependencies>
     
     <dependency>
@@ -93,15 +95,31 @@
             <version>2.3.6-01</version>
           </dependency>
         </dependencies>
+     </plugin>
+
+     <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                      <mainClass>se.inera.certificate.tools.Migrera</mainClass>
+                  </manifestEntries>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <appendAssemblyId>false</appendAssemblyId>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-        </configuration>
         <executions>
           <execution>
             <id>make-assembly</id>
@@ -110,12 +128,7 @@
               <goal>single</goal>
             </goals>
             <configuration>
-              <finalName>${project.artifactId}-${project.version}</finalName>
-              <archive>
-                <manifest>
-                  <mainClass>se.inera.certificate.tools.Migrera</mainClass>
-                </manifest>
-              </archive>
+              <descriptor>src/main/assembly/manifest.xml</descriptor>
             </configuration>
           </execution>
         </executions>
