Rättning i properties för Migrering

--- a/tools/Migrering/src/main/assembly/template/dataSource.properties
+++ b/tools/Migrering/src/main/assembly/template/dataSource.properties
@@ -1,4 +1,4 @@
-dataSource.url=jdbc:mysql://localhost:3306/intyg?useCompression=true
+dataSource.url=jdbc:mysql://###DB-SERVER###:3306/###DB-NAME###?useCompression=true
 dataSource.driver=com.mysql.jdbc.Driver
 dataSource.username=###USER###
 dataSource.password=###PASSWORD###
