--- a/tools/AnonymiseraIntygsDatabas/dataSource.properties
+++ b/tools/AnonymiseraIntygsDatabas/dataSource.properties
@@ -1,7 +1,7 @@
 dataSource.url=jdbc:mysql://localhost:3306/intyg?useCompression=true
 dataSource.driver=com.mysql.jdbc.Driver
-dataSource.username=intyg_user
-dataSource.password=intyg_pass
+dataSource.username=intyg
+dataSource.password=intyg
 #dataSource.url=jdbc:h2:tcp://localhost:9092/mem:dataSource
 #dataSource.driver=org.h2.Driver
 #dataSource.username=sa
