--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -16,18 +16,6 @@
   <version>1.0</version>
 
 
-  <properties>
-    <groovy.version>2.3.6</groovy.version>
-  </properties>
-  <distributionManagement>
-    <repository>
-      <id>cloudbees-private-release-repository</id>
-      <name>Callista Software Release Respository</name>
-      <url>dav:https://repository-callistasoftware.forge.cloudbees.com/release</url>
-      <layout>default</layout>
-    </repository>
-  </distributionManagement>
-
   <dependencies>
     
     <dependency>
@@ -87,40 +75,37 @@
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.9.0-01</version>
+            <version>${groovy-eclipse-compiler.version}</version>
           </dependency>
           <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.3.6-01</version>
+            <version>${groovy-eclipse-batch.version}</version>
           </dependency>
         </dependencies>
      </plugin>
 
-     <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <manifestEntries>
-                      <mainClass>se.inera.certificate.tools.Migrera</mainClass>
-                  </manifestEntries>
-                </transformer>
-              </transformers>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
+          <execution>
+            <id>make-jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <archive>
+                <manifest>
+                  <mainClass>se.inera.certificate.tools.Migrera</mainClass>
+                </manifest>
+              </archive>
+              <descriptorRefs>
+                <descriptorRef>jar-with-dependencies</descriptorRef>
+              </descriptorRefs>
+              <appendAssemblyId>false</appendAssemblyId>
+            </configuration>
+          </execution>
           <execution>
             <id>make-assembly</id>
             <phase>package</phase>
