--- a/web/pom.xml
+++ b/web/pom.xml
@@ -71,6 +71,10 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
