INTYG-1391: konfiguration uppbyggd så att logiska adresser och certifikatstyper knyts till mottagar-id

--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -4,4 +4,4 @@ modules.port=8080
 statistics.enabled = true
 
 intygstjanst.getmedicalcertificateforcare.endpoint.url = not used
-intygstjanst.logicaladdress = not used
+intygstjanst.logicalAddress = not used
