--- a/web/recipient-dev.properties
+++ b/web/recipient-dev.properties
@@ -18,7 +18,7 @@
 #   Test                     for dummy consumer,
 #   FKORG                    for development mode
 recipient.FK.name = F\u00F6rs\u00E4kringskassan
-recipient.FK.logicalAddress = FKORG
+recipient.FK.logicalAddress = Test
 recipient.FK.certificateType = fk7263
 
 # Defines the recipient TS (Transportstyrelsen)
