INTYG-1396: Tagit bort och ändrat namn på konfigurationsfiler.
Uppdaterat pom.xml att peka på konfiguratiosfilernas nya namn.
Ändrat i application-context.xml så att konstruktionen default.${spring.profiles.active}.properties. Nu finns det bara en default.properties istället för default.dev.properties, default.local.properties, default.test.properties etc

--- a/web/certificate-dev.properties
+++ b/web/certificate-dev.properties
@@ -1,18 +1,6 @@
-# NTjP SSL config (Unused, since we are using local stubs)
-ntjp.ws.certificate.file =
-ntjp.ws.certificate.type=PKCS12
-ntjp.ws.truststore.file =
-ntjp.ws.truststore.type=JKS
-
 # Endpoints for communicating with FK
-registermedicalcertificatev3.endpoint.url=http://localhost:8080/inera-certificate/register-medical-certificate-stub
-sendmedicalcertificatequestionv1.endpoint.url=http://localhost:8080/inera-certificate/send-certificate-question-stub
-registercertificatev1.endpoint.url=http://localhost:8080/inera-certificate/register-certificate-stub
-revokemedicalcertificatev1.endpoint.url = http://localhost:8080/inera-certificate/revoke-medical-certificate-stub
-
-# Logical address for FK (via NTjP)
-certificatesender.address.fk7263 = FK
-revokecertificate.address.fk7263 = FK
-
-# Override to disable sending JMS messages to statistik-tjänsten, since we don't have JMS connectivity in this env
-statistics.enabled = false
+fk.baseUrl = http://localhost:8080
+registermedicalcertificatev3.endpoint.url = ${fk.baseUrl}/inera-certificate/register-medical-certificate-stub
+sendmedicalcertificatequestionv1.endpoint.url = ${fk.baseUrl}/inera-certificate/send-certificate-question-stub
+registercertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/register-certificate-stub
+revokemedicalcertificatev1.endpoint.url = ${fk.baseUrl}/inera-certificate/revoke-medical-certificate-stub
