--- a/web/src/main/resources/default.properties
+++ b/web/src/main/resources/default.properties
@@ -1,7 +1,17 @@
 # Default configuration for all environments
 store.original.certificate = true
-modules.port=8080
-statistics.enabled = true
 
-intygstjanst.getmedicalcertificateforcare.endpoint.url = not used
-intygstjanst.logicalAddress = not used
+# NTjP SSL config (Unused, since we are using local stubs)
+ntjp.ws.certificate.file =
+ntjp.ws.certificate.type =PKCS12
+ntjp.ws.truststore.file =
+ntjp.ws.truststore.type =JKS
+
+# Endpoints for communicating with FK
+registermedicalcertificatev3.endpoint.url =
+sendmedicalcertificatequestionv1.endpoint.url =
+registercertificatev1.endpoint.url =
+revokemedicalcertificatev1.endpoint.url =
+
+# Override to disable sending JMS messages to statistik-tj\u00E4nsten, since we don't have JMS connectivity in this env
+statistics.enabled = false
