WEBCERT-1250 Bryt ut gemensamma FitNesse-fixturer för att kunna ta bort beroendet till intygstjänsten

--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -34,6 +34,13 @@
       <artifactId>intygstjanst-persistence</artifactId>
     </dependency>
 
+    <!-- Tools -->
+    <dependency>
+      <groupId>se.inera.intyg.tools</groupId>
+      <artifactId>tools-specifications</artifactId>
+      <version>${tools.version}</version>
+    </dependency>
+
     <!-- Schemas -->
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
