--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
     <common.version>0-SNAPSHOT</common.version>
     <common.version.range>(,2.1.0]</common.version.range>
 
+    <!-- Tools -->
+    <tools.version>0-SNAPSHOT</tools.version>
+
     <!-- Intygstyper -->
     <intygstyper.version>0-SNAPSHOT</intygstyper.version>
     <intygstyper.version.range>(,2.1.0]</intygstyper.version.range>
@@ -121,6 +124,11 @@
         <groupId>se.inera.intyg.tools</groupId>
         <artifactId>anonymisering</artifactId>
         <version>${anonymisering.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.tools</groupId>
+        <artifactId>tools-specifications</artifactId>
+        <version>${tools.version}</version>
       </dependency>
 
     </dependencies>
