--- a/web/pom.xml
+++ b/web/pom.xml
@@ -52,16 +52,21 @@
       <artifactId>itintegration-monitoring-interactions</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>se.inera.intyg.schemas.intygstjanster.ts.services.v1</groupId>
+      <artifactId>se-intygstjanster-ts-services-interactions</artifactId>
+    </dependency>
+
     <!-- Intygstyper -->
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>fk7263</artifactId>
     </dependency>
-    <!--
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-bas</artifactId>
     </dependency>
+    <!--
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-diabetes</artifactId>
