--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,5 +1,5 @@
 ---
-# This playbook deploys intygstjansten 
+# This playbook deploys Intygstjansten 
 
 - hosts: tomcat
   sudo: yes 
@@ -10,7 +10,7 @@
     # latest release: 2.1.0-b38
     # latest snapshot: 2.1.0-a672
     version: 2.1.0-b38
-    config_version: master
+    config_version: release/v2.1.0
 
   roles:
     - intygstjanst
