--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -9,8 +9,8 @@
 
     # latest release: 2.1.0-b38
     # latest snapshot: 2.1.0-a672
-    version: 2.1.0-b38
-    config_version: release/v2.1.0
+    version: 2.1.0-RC1
+    config_version: original/release/v2.1.0
 
   roles:
     - intygstjanst
