--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -15,6 +15,8 @@
   <name>Intygstjänsten (FitNesse)</name>
 
   <properties>
+    <groovy.httpBuilder.version>0.7.1</groovy.httpBuilder.version>
+  
     <certificate.baseUrl>http://localhost:8080/inera-certificate/</certificate.baseUrl>
 
     <fitnesse.port>9123</fitnesse.port>
@@ -78,17 +80,6 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-all</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.codehaus.groovy.modules.http-builder</groupId>
-      <artifactId>http-builder</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.codehaus.groovy</groupId>
-          <artifactId>groovy</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
 
     <dependency>
