--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -7,9 +7,9 @@
     # repo - values: snapshot or release
     repo: release
 
-    # latest release: 2.1.0-b38
+    # latest release: 2.1.0-RC3
     # latest snapshot: 2.1.0-a672
-    version: 2.1.0-RC1
+    version: 2.1.0-RC3
     config_version: origin/release/v2.1.0
 
   roles:
