Lade till dependency till Ts-parent

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
         <artifactId>ts-diabetes</artifactId>
         <version>${intygstyper.version}</version>
       </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.intygstyper</groupId>
+        <artifactId>ts-parent</artifactId>
+        <version>${intygstyper.version}</version>
+      </dependency>
 
       <!-- Schemas -->
       <dependency>
