--- a/web/pom.xml
+++ b/web/pom.xml
@@ -71,6 +71,11 @@
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-diabetes</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>ts-parent</artifactId>
+    </dependency>
     
     <dependency>
       <groupId>commons-io</groupId>
