WEBCERT-1651: Update of imports due to refactoring of schemas Java-code to common repo

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
         <artifactId>logging-util</artifactId>
         <version>${common.version}</version>
       </dependency>
+      <dependency>
+        <groupId>se.inera.intyg.common</groupId>
+        <artifactId>common-schemas</artifactId>
+        <version>${common.version}</version>
+      </dependency>
 
       <!-- Intygstyper -->
       <dependency>
