--- a/web/pom.xml
+++ b/web/pom.xml
@@ -37,6 +37,10 @@
       <groupId>se.inera.intyg.common</groupId>
       <artifactId>logging-util</artifactId>
     </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.common</groupId>
+      <artifactId>common-schemas</artifactId>
+    </dependency>
 
     <!-- Schemas -->
     <dependency>
@@ -51,7 +55,6 @@
       <groupId>se.riv.itintegration.monitoring</groupId>
       <artifactId>itintegration-monitoring-interactions</artifactId>
     </dependency>
-
     <dependency>
       <groupId>se.inera.intyg.schemas.intygstjanster.ts.services.v1</groupId>
       <artifactId>se-intygstjanster-ts-services-interactions</artifactId>
@@ -66,12 +69,10 @@
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-bas</artifactId>
     </dependency>
-    
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-diabetes</artifactId>
     </dependency>
-
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>ts-parent</artifactId>
