--- a/pom.xml
+++ b/pom.xml
@@ -117,12 +117,12 @@
 
       <!-- Schemas -->
       <dependency>
-        <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate.v1</groupId>
+        <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate</groupId>
         <artifactId>clinicalprocess-healthcond-certificate</artifactId>
         <version>${clinicalprocess-healthcond-certificate.version}</version>
       </dependency>
       <dependency>
-        <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting.v1</groupId>
+        <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting</groupId>
         <artifactId>insuranceprocess-healthreporting-interactions</artifactId>
         <version>${insuranceprocess-healthreporting.version}</version>
       </dependency>
@@ -133,14 +133,14 @@
       </dependency>
 
       <dependency>
-        <groupId>se.inera.intyg.schemas.intygstjanster.ts.services.v1</groupId>
+        <groupId>se.inera.intyg.schemas.intygstjanster.ts</groupId>
         <artifactId>se-intygstjanster-ts-services-core</artifactId>
         <version>${se-intygstjanster-ts-services.version}</version>
       </dependency>
     
       <dependency>
-        <groupId>se.inera.intyg.schemas.intygstjanster.ts.services.v1</groupId>
-        <artifactId>se-intygstjanster-ts-services-interactions</artifactId>
+        <groupId>se.inera.intyg.schemas.intygstjanster.ts</groupId>
+        <artifactId>intygstjansten-ts</artifactId>
         <version>${se-intygstjanster-ts-services.version}</version>
       </dependency> 
 
