--- a/tools/Migrering/pom.xml
+++ b/tools/Migrering/pom.xml
@@ -19,7 +19,7 @@
   <dependencies>
     
     <dependency>
-      <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting.v1</groupId>
+      <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting</groupId>
       <artifactId>insuranceprocess-healthreporting-interactions</artifactId>
     </dependency>
 
