--- a/web/pom.xml
+++ b/web/pom.xml
@@ -44,11 +44,11 @@
 
     <!-- Schemas -->
     <dependency>
-      <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate.v1</groupId>
+      <groupId>se.inera.intyg.schemas.clinicalprocess.healthcond.certificate</groupId>
       <artifactId>clinicalprocess-healthcond-certificate</artifactId>
     </dependency>
     <dependency>
-      <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting.v1</groupId>
+      <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting</groupId>
       <artifactId>insuranceprocess-healthreporting-interactions</artifactId>
     </dependency>
     <dependency>
@@ -56,8 +56,8 @@
       <artifactId>itintegration-monitoring-interactions</artifactId>
     </dependency>
     <dependency>
-      <groupId>se.inera.intyg.schemas.intygstjanster.ts.services.v1</groupId>
-      <artifactId>se-intygstjanster-ts-services-interactions</artifactId>
+      <groupId>se.inera.intyg.schemas.intygstjanster.ts</groupId>
+      <artifactId>intygstjansten-ts</artifactId>
     </dependency>
 
     <!-- Intygstyper -->
