--- a/tools/Korrigering-INTYG-1413/pom.xml
+++ b/tools/Korrigering-INTYG-1413/pom.xml
@@ -17,11 +17,11 @@
 
 
   <dependencies>
-    
+
+    <!-- RIVTA Schemas -->
     <dependency>
-      <groupId>se.inera.intyg.schemas.insuranceprocess.healthreporting.v1</groupId>
-      <artifactId>insuranceprocess-healthreporting-interactions</artifactId>
-      <version>1.0.0</version>
+      <groupId>se.riv.insuranceprocess.healthreporting</groupId>
+      <artifactId>insuranceprocess-healthreporting-schemas</artifactId>
     </dependency>
 
     <dependency>
