--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>se.inera.intyg.intygstjanst</groupId>
   <artifactId>intygstjanst</artifactId>
-  <version>0-SNAPSHOT</version>
+  <version>2.1.4</version>
   <packaging>pom</packaging>
 
   <name>Intygstjänsten</name>
@@ -20,27 +20,27 @@
   <properties>
 
     <!-- Common -->
-    <common.version>0-SNAPSHOT</common.version>
+    <common.version>2.1.0</common.version>
     <common.version.range>(,2.1.0]</common.version.range>
 
     <!-- Tools -->
-    <tools.version>0-SNAPSHOT</tools.version>
+    <tools.version>2.1.0</tools.version>
     <tools.version.range>(,2.1.0]</tools.version.range>
 
     <!-- Intygstyper -->
-    <intygstyper.version>0-SNAPSHOT</intygstyper.version>
+    <intygstyper.version>2.1.4</intygstyper.version>
     <intygstyper.version.range>(,2.1.4]</intygstyper.version.range>
 
     <!-- Schemas -->
-    <clinicalprocess-healthcond-certificate.version>0-SNAPSHOT</clinicalprocess-healthcond-certificate.version>
+    <clinicalprocess-healthcond-certificate.version>1.0.0</clinicalprocess-healthcond-certificate.version>
     <clinicalprocess-healthcond-certificate.version.range>
       (,1.0.0]
     </clinicalprocess-healthcond-certificate.version.range>
 
-    <insuranceprocess-healthreporting.version>0-SNAPSHOT</insuranceprocess-healthreporting.version>
+    <insuranceprocess-healthreporting.version>1.0.0</insuranceprocess-healthreporting.version>
     <insuranceprocess-healthreporting.version.range>(,1.0.0]</insuranceprocess-healthreporting.version.range>
 
-    <itintegration-monitoring.version>0-SNAPSHOT</itintegration-monitoring.version>
+    <itintegration-monitoring.version>1.0.0</itintegration-monitoring.version>
     <itintegration-monitoring.version.range>(,1.0.0]</itintegration-monitoring.version.range>
 
   </properties>
