--- a/tools/liquibase-runner/pom.xml
+++ b/tools/liquibase-runner/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>se.inera.intyg.intygstjanst</groupId>
     <artifactId>intygstjanst</artifactId>
-    <version>2.2.0-b54</version>
+    <version>0-SNAPSHOT</version>
     <relativePath>../../</relativePath>
   </parent>
 
