--- a/specifications/pom.xml
+++ b/specifications/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>se.inera.intyg.intygstjanst</groupId>
     <artifactId>intygstjanst</artifactId>
-    <version>2.2.0-b56</version>
+    <version>0-SNAPSHOT</version>
   </parent>
 
   <artifactId>intygstjanst-specifications</artifactId>
