Kvalificera grupp-namn med applikationen, för att möjliggöra för NMT att köra med en gemensam hosts-fil för samtliga applikationer.
(cherry picked from commit ae9ea7107ec7a686efe28234248a270336ec55bb)
Signed-off-by: Bjorn Beskow <bb@callistaenterprise.se>

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook deploys intygstjansten 
 
-- hosts: tomcat
+- hosts: intygstjanst-tomcat
   sudo: yes 
   vars: 
     # repo - values: snapshot or release
