--- a/ansible/provision_tomcat.yml
+++ b/ansible/provision_tomcat.yml
@@ -1,7 +1,7 @@
 ---
 # This playbook provisions the resources needed by tomcat hosts of intygstjansten 
 
-- hosts: tomcat
+- hosts: intygstjanst-tomcat
   sudo: yes 
   
   roles:
