Återfört ändringar från master (baserat på skillnader efter merge)

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,12 +1,12 @@
 ---
-# This playbook deploys intygstjansten 
+# This playbook deploys Intygstjansten 
 
 - hosts: intygstjanst-tomcat
   sudo: yes 
   vars: 
     # repo - values: snapshot or release
     repo: release
-    version: 2.3.0-b60
+    version: 2.3.0-RC1
     config_version: master
 
   roles:
