--- a/web/pom.xml
+++ b/web/pom.xml
@@ -69,10 +69,6 @@
       <groupId>se.inera.intyg.transportstyrelsen</groupId>
       <artifactId>intyg-transportstyrelsen-schemas</artifactId>
     </dependency>
-    <dependency>
-      <groupId>se.inera.intyg.fk</groupId>
-      <artifactId>intyg-forsakringskassan-schemas</artifactId>
-    </dependency>
 
     <!-- Intygstyper -->
     <dependency>
@@ -94,6 +90,10 @@
     <dependency>
       <groupId>se.inera.intyg.intygstyper</groupId>
       <artifactId>sjukpenning</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>se.inera.intyg.intygstyper</groupId>
+      <artifactId>sjukersattning</artifactId>
     </dependency>
     
     <dependency>
