WEBCERT-2067 : Ändrat "skip-jacoco" till "skip-coverage" och använder denna flagga även för att köra javascript coverage

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     <intyg-transportstyrelsen.version>0-SNAPSHOT</intyg-transportstyrelsen.version>
     <intyg-transportstyrelsen.version.range>(,1.0.0]</intyg-transportstyrelsen.version.range>
 
-    <skip-jacoco>true</skip-jacoco>
+    <skip-coverage>true</skip-coverage>
   </properties>
 
   <modules>
@@ -222,7 +222,7 @@
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
         <configuration>
-            <skip>${skip-jacoco}</skip>
+            <skip>${skip-coverage}</skip>
         </configuration>
         <executions>
           <execution>
