WEBCERT-2166: Fixed package names after moving files in common/specifications

--- a/specifications/src/test/fitnesse/plugins.properties
+++ b/specifications/src/test/fitnesse/plugins.properties
@@ -1,1 +1,1 @@
-CustomComparators = json:se.inera.certificate.spec.util.JSONAssertComparator
+CustomComparators = json:se.inera.intyg.common.specifications.spec.util.JSONAssertComparator
